--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^14.2.0",
+    "@vueuse/core": "^14.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.9.3",
     "lucide-vue-next": "^0.563.0",
     "radix-vue": "^1.9.17",
-    "reka-ui": "^2.8.0",
+    "reka-ui": "^2.8.2",
     "tailwind-merge": "^3.4.0",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
